todo/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
